# TARAlgo-

./: CMakeLists.txt  README.md
proto/: tar.proto
scripts/: kill_servers.sh  run_client.sh  run_servers.sh  run_servers_computer1.sh  run_servers_computer2.sh
src/: TARAlgorithm.cpp  TARAlgorithm.hpp  TARServiceImpl.cpp  TARServiceImpl.hpp  client_main.cpp  server_main.cpp
